--- a/src/pages/ListaDevs/style.css
+++ b/src/pages/ListaDevs/style.css
@@ -1,21 +1,5 @@
-#main_listaservicos h2 {
-    font-family: var(--font1);
-    font-size: 30px;
-    text-transform: uppercase;
-}
-
-.botao {
-    font-family: var(--font1);
-    color: var(--branco);
-    text-transform: uppercase;
-    font-size: 18px;
-    text-decoration: none;
-    border-radius: 30%;
-    box-shadow: 15px 15px 30px #00000066;
-}
-
 /* MAIN */
-#main_listaservicos {
+#main_listadevs {
     background-image:
         linear-gradient(180deg, #060821 0%, #06082120 25%, #0608218f 80%, #060821 100%),
         url("../../assets/images/background_login.png");
@@ -25,7 +9,7 @@
     background-position: center;
 }
 
-.container_lista_servicos {
+.container_lista_devs {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,17 +17,17 @@
     padding: 50px 0;
 }
 
-.lista_servicos_conteudo {
+.lista_devs_conteudo {
     width: 100%;
     max-width: 900px;
-    
+
     padding: 50px 0;
     margin-top: 6vh;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
     background: linear-gradient(114.61deg, #ffffff0d 1.08%, #ffffff1e 99.26%);
     box-shadow: 30px 30px 60px #00000080;
     border: 1px solid #ffffffcc;
@@ -52,13 +36,13 @@
     color: var(--branco);
 }
 
-#main_listaservicos h1 {
+#main_listadevs h1 {
     font-family: var(--font1);
     font-size: 50px;
     text-align: center;
 }
 
-#main_listaservicos hr {
+#main_listadevs hr {
     margin: 20px auto;
     width: 80%;
     height: 4px;
@@ -67,7 +51,7 @@
     border-radius: 50%;
 }
 
-.lista_servicos_conteudo form {
+.lista_devs_conteudo form {
     width: 85%;
     padding: 20px 0;
 }
@@ -103,7 +87,7 @@
     border-radius: 20px;
 
     background: linear-gradient(136deg, #ffffff1a 0%, #ffffff0b 100%);
-    backdrop-filter: blur(15px);    
+    backdrop-filter: blur(15px);
     box-shadow: 30px 30px 60px 0px #00000080;
 
     font-size: 16px;
@@ -137,64 +121,14 @@
     justify-content: space-between;
 }
 
-.lista_servicos_conteudo ul {
+.lista_devs_conteudo ul {
     list-style: none;
     padding: 50px 0;
 }
 
-.lista_servicos_conteudo li {
+.lista_devs_conteudo li {
     margin-bottom: 20px;
     padding-bottom: 20px;
+    border-bottom: solid 1px #ffffff34;
 }
 
-.servico {
-    width: 85%;
-    margin: 0 auto;
-    padding: 15px;
-
-    border: solid 1px #909090;
-    border-radius: 16px;
-    background: linear-gradient(136deg, #ffffff1a 0%, #ffffff0b 100%);
-    backdrop-filter: blur(15px);
-
-    font-family: var(--font2);
-}
-
-.topo_servico {
-    width: 100%;
-
-    margin-bottom: 30px;
-
-    display: flex;
-    justify-content: space-between;
-
-    font-size: 20px;
-}
-
-.topo_servico h3 {
-    width: 65%;
-}
-
-.servico p {
-    margin-bottom: 30px;
-}
-
-.servico .techs {
-    max-width: 70%;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.servico .techs span {
-    font-size: 14px;
-    padding: 2px 10px;
-
-    margin-right: 20px;
-    margin-bottom: 15px;
-
-    border-radius: 20px;
-    background-color: var(--rosa);
-    color: white;
-    font-weight: 600;
-}
